[gd_scene load_steps=5 format=3 uid="uid://gb8gn71yduqt"]

[ext_resource type="PackedScene" uid="uid://b1tepfbuvkv0e" path="res://items/item.tscn" id="1_f0ie4"]
[ext_resource type="Script" uid="uid://be2ttfjukscxb" path="res://items/bom.gd" id="2_w81c7"]
[ext_resource type="Texture2D" uid="uid://d0c3yt2ugmg7e" path="res://icon.svg" id="3_revlv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w81c7"]
radius = 133.82077

[node name="Bom" instance=ExtResource("1_f0ie4")]
collision_mask = 5
mass = 3.0
lock_rotation = true
linear_damp = 1.0
script = ExtResource("2_w81c7")

[node name="Icon" parent="." index="1"]
scale = Vector2(0.50711936, 0.50711936)

[node name="BomTimer" type="Timer" parent="." index="2"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="BomArea" type="Area2D" parent="." index="3"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="Icon2" type="Sprite2D" parent="BomArea" index="0"]
modulate = Color(1, 0, 0, 0.41960785)
z_index = 10
scale = Vector2(2.088124, 2.088124)
texture = ExtResource("3_revlv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BomArea" index="1"]
shape = SubResource("CircleShape2D_w81c7")

[connection signal="timeout" from="BomTimer" to="." method="_on_bom_timer_timeout"]
